# respmech

./: .gitignore  CLAUDE.md  README.md  emg.py  example.py  pyproject.toml  respmech.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
docs/: CARDIAC_GATED_PEAK_EMG.md  DISTRIBUTION.md  INSTALL.md  NOISE_ECG_OPTIMIZATION.md  PLAN.md  PTP_INVESTIGATION.md  RELEASING.md  REVERSE_ENGINEERING.md  SIGNING.md
installer/: respmech.icns
legacy/: README.md  respmech.py
packaging/homebrew/: respmech.rb
scripts/: gen_readme_figures.py  sign-msi-certum.sh
src/respmech/: __main__.py
src/respmech/cli/: __main__.py
src/respmech/core/: _cancel.py  _compat.py  _legacy_ns.py  compute.py  emg.py  entropy.py  noise.py  pipeline.py  plot_style.py  results.py  sample.py  settings.py  summary.py  units.py
src/respmech/core/io/: _figure_process.py  loaders.py  writers.py
src/respmech/core/plots/: __init__.py
src/respmech/settingsio/: migrate.py  toml_io.py
src/respmech/ui/: advanced_dialog.py  app.py  channel_setup_dialog.py  channel_summary.py  column_stack.py  dialogs.py  help_text.py  logo.py  main_window.py  noise_profile_dialog.py  plot_overlays.py  plot_perf.py  prefs.py  splash.py  startup_dialog.py  state.py  theme.py  validation.py  wheel.py  workers.py
src/respmech/ui/screens/: _preview_cache.py  preview_screen.py  run_screen.py  settings_screen.py
tests/golden/: README.md  build_production_golden.py  conftest.py  generate_data.py  golden_newcore.py  golden_reference.json  make_golden.py  prod_runner.py  production_comparison.md  production_golden.json  production_manifest.json  regen_production_emg_golden.py  requirements-golden.txt  summarize_production.py  test_golden.py  test_production_emg_golden.py  test_production_golden.py
tests/golden/input/: synth_case_A.csv  synth_case_B.csv
tests/golden/production/: README.md
tests/unit/: _helpers.py  conftest.py  test_advanced_dialog.py  test_cancel.py  test_channel_setup.py  test_channel_stack_layout.py  test_channel_summary.py  test_cli_pipeline.py  test_column_stack.py  test_conditional_cards.py  test_core_outputs.py  test_cross_platform.py  test_dialogs_dark_mode.py  test_ecg.py  test_ecg_tab.py  test_emg_processing_defaults.py  test_emg_suggest.py  test_entropy_helpers.py  test_figure_process.py  test_flow_overlay.py  test_gui.py  test_gui_errors_and_splash.py  test_gui_hardening.py  test_gui_interactive.py  test_gui_reactive.py  test_load_cache.py  test_migrate.py  test_noise.py  test_noise_profile_dialog.py  test_plot_alignment.py  test_plot_perf.py  test_prefs.py  test_preview_cache.py  test_preview_screen.py  test_ptp.py  test_resampling.py  test_review_wave1.py  test_review_wave2.py  test_review_wave3.py  test_review_wave4.py  (+13 more)
