[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "respmech"
# Version is single-sourced from src/respmech/__init__.py (__version__) via hatchling's
# dynamic version — see [tool.hatch.version]. (The [tool.briefcase] version below is a
# separate, manual copy; briefcase can't read a dynamic version. Bump both together — see
# RELEASING.md.)
dynamic = ["version"]
description = "Respiratory mechanics, work of breathing and diaphragm EMG entropy analysis"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
# PEP 639: SPDX expression + the license file. briefcase's Windows template requires
# `license-files` to install a licence into the MSI (the macOS template does not enforce it).
# NB briefcase treats each entry as a literal path, not a glob — list the file explicitly.
license = "GPL-3.0-or-later"
# LICENSE = the project's GPL. "LICENSE pyentrp" = the MIT licence of the vendored
# pyEntropy sample-entropy code (src/respmech/core/entropy.py), shipped for attribution.
# briefcase reads each entry as a literal path (not a glob), so both are listed explicitly.
license-files = ["LICENSE", "LICENSE pyentrp"]
authors = [{ name = "Emil Ingerslev Walsted", email = "emilwalsted@gmail.com" }]
maintainers = [{ name = "Emil Ingerslev Walsted", email = "emilwalsted@gmail.com" }]
keywords = [
    "respiratory", "mechanics", "work-of-breathing", "campbell-diagram",
    "EMG", "electromyography", "diaphragm", "physiology", "sample-entropy",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Natural Language :: English",
]
dependencies = [
    "numpy>=1.24",
    # >=1.11: scipy.integrate.simpson's default even-interval rule became the
    # Cartwright correction at 1.11 (was 'avg' in 1.10). The EMG/PTP/WOB goldens are
    # validated on the Cartwright rule (golden env scipy 1.13.x), so 1.10 would give
    # ~1% different integrated-EMG/WOB numbers. Pin the floor to the validated rule.
    "scipy>=1.11",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
# EMG spectral noise reduction needs librosa; diagnostic plots need matplotlib.
emg = ["librosa>=0.10"]
plots = ["matplotlib>=3.7", "seaborn>=0.12"]
gui = ["PySide6>=6.6", "pyqtgraph>=0.13", "matplotlib>=3.7"]
dev = ["pytest>=7.0", "librosa>=0.10", "matplotlib>=3.7", "seaborn>=0.12"]
# desktop-installer tooling (briefcase builds the Windows MSI / macOS dmg); a build-time
# dependency only — never needed to run or import the app.
packaging = ["briefcase>=0.3.19"]

[project.scripts]
respmech = "respmech.cli.__main__:main"

[project.gui-scripts]
respmech-gui = "respmech.ui.app:main"

[project.urls]
Homepage = "https://github.com/emilwalsted/respmech"
Repository = "https://github.com/emilwalsted/respmech"
Documentation = "https://github.com/emilwalsted/respmech/tree/master/docs"
Issues = "https://github.com/emilwalsted/respmech/issues"
"Release notes" = "https://github.com/emilwalsted/respmech/releases"

# Single source of truth for the version: src/respmech/__init__.py's __version__.
[tool.hatch.version]
path = "src/respmech/__init__.py"

# The wheel ships ONLY the importable package (src/respmech + its logo asset). No tests,
# no data, no docs, no legacy monolith.
[tool.hatch.build.targets.wheel]
packages = ["src/respmech"]

# The sdist is an explicit allow-list — a public-repo safety measure. It carries only the
# source package, the licences and the README; it deliberately EXCLUDES tests/ (which
# reference gitignored real research recordings under tests/golden/production/), legacy/,
# docs/, installer/, packaging/ and scripts/. pyproject.toml is always included by hatchling.
[tool.hatch.build.targets.sdist]
only-include = ["src/respmech", "README.md", "LICENSE", "LICENSE pyentrp"]

[tool.pytest.ini_options]
# The package lives under src/ (the v1 monolith is frozen in legacy/, not importable).
pythonpath = ["src"]
addopts = "--import-mode=importlib"


# --- briefcase: native desktop installers (Windows MSI / macOS dmg) ----------
# Build with `.[packaging]` installed:
#     briefcase create <windows|macOS>
#     briefcase build  <windows|macOS>
#     briefcase package <windows|macOS>     # -> the distributable installer
# The bundle runs `python -m respmech` (src/respmech/__main__.py -> the GUI); the CLI
# stays the separate `respmech` console script.
[tool.briefcase]
project_name = "RespMech"
bundle = "dk.respmech"                       # reverse-domain id (brand domain respmech.dk)
version = "2.3.0"
url = "https://github.com/emilwalsted/respmech"
license = "GPL-3.0-or-later"
author = "Emil Ingerslev Walsted"
author_email = "emilwalsted@gmail.com"

[tool.briefcase.app.respmech]
formal_name = "RespMech"
description = "Respiratory mechanics, work of breathing and diaphragm EMG analysis"
long_description = """RespMech analyses human respiratory physiology recordings: respiratory
mechanics, work of breathing (Campbell diagram), and diaphragm EMG (RMS + spectral entropy,
with optional ECG/noise suppression). Load LabChart/CSV/Excel exports, tune the analysis
interactively, and export publication-ready per-breath and averaged results.
"""
icon = "installer/respmech"                  # briefcase picks respmech.ico / .icns / .png per platform
sources = ["src/respmech"]
# ONLY the unit tests — deliberately NOT ["tests"], which would pull tests/golden/production/
# (real research recordings that must never be redistributed) into a `briefcase … --test`
# build. Distribution builds (`briefcase package`, no --test) ship `sources` only, never tests.
test_sources = ["tests/unit"]

# Everything needed to RUN the app (union of the base deps + gui/emg/plots extras). Kept
# explicit rather than referencing the extras so a bundle can't silently drop a dependency.
requires = [
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "tomli-w>=1.0",
    "librosa>=0.10",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]
test_requires = ["pytest>=7.0"]

[tool.briefcase.app.respmech.macOS]
# Single-arch (host) build: librosa's numba/llvmlite don't reliably ship universal2
# wheels, which a universal_build would require. Testers on the other Mac arch get a
# separate build. std-nslog routes app logging to Apple's unified logging.
universal_build = false
# Raise the deployment target above briefcase's default (macOS 11): scipy's cp313 arm64
# wheels are built for macOS 12+, so a macos_11 pip target resolves scipy to "no versions".
# numpy's macos_11 wheels remain compatible with a 12.0 target.
min_os_version = "12.0"
requires = ["std-nslog>=1.0.0"]

[tool.briefcase.app.respmech.windows]
# NOTE (MAX_PATH): Windows caps legacy paths at 260 chars. If a tester nests the input
# folder very deeply a run can fail on path length. Long-path awareness needs a manifest
# flag + a machine registry opt-in that briefcase's stock template doesn't expose; tracked
# as a follow-up. Workaround for now: keep input/output folders reasonably shallow.
